[workspace]
members = [
    "src/keret-adapter",
    "src/keret-controller",
    "src/keret-controller-domain",
    "src/keret-controller-transmit",
    "src/keret-service-transmit",
    "src/keret-service",
]

resolver = "2"

[profile.release]
lto = true

[profile.release.package.keret-controller]
codegen-units = 1
#debug = true
