[package]
name = "keret-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
snafu = "0.8"
clap = { version = "4.5", features = ["derive"] }
serialport = "4.5.1"
keret-controller-transmit = { path = "../keret-controller-transmit" }
keret-service-transmit = { path = "../keret-service-transmit" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.83"

[dev-dependencies]
mockall = "0.13.0"