[package]
name = "keret-controller-transmit"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22", default-features = false }
snafu = { version = "0.8", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
postcard = { version = "1.0.10" }
heapless = "0.7.17"

[features]
"std" = []
default = ["std"]
